--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -6,5 +6,7 @@
 </head>
 <body>
 <h1>Welcome to Task Manager!</h1>
+<h2> <a th:href="@{/task}">Task list</a></h2>
+<h2> <a th:href="@{/task/create}">Add task</a></h2>
 </body>
 </html>
