--- a/src/main/resources/templates/task.html
+++ b/src/main/resources/templates/task.html
@@ -14,5 +14,7 @@
         <td th:text="${t.date}" />
     </tr>
 </table>
+<h2> <a th:href="@{/}">Home</a></h2>
+<h2> <a th:href="@{/task/create}">Add task</a></h2>
 </body>
 </html>
